                                  Project Information:
                                  ====================

Name: tabsrmm
Homepage: http://miranda.or.at
Support: http://www.miranda.or.at/forums/

                               --------------------
						
				    Version History:
				    ================

+ : new feature
* : changed
! : bufgix						
- : feature removed or disabled because of pending bugs

Version 1.0.0.1 - 2006/08/05

	! fixed updater support (301, invalid response).
	! fixed bug when re-attaching a temporary contact to a new
	  container while the option to delete temporary contacts on close
	  is enabled.
	! fixed minor issue with [color] bbcode
	! using the own UIN as fallback for own nickname, to solve the "Unknown
	  Contact" problem which can appear when the own nickname is not 
	  properly set.
	! fixed a few issues with global splitter positioning.
	* selecting offline sub protocol throws a warning instead of an error.
	- removed the feature to load a background image for the message input area.
	  was causing too many troubles and people did not understand that it was an
	  experimental feature, thus sending bug reports.
	! fixed problem with freezing when opening a message window by clicking on a
	  typing notify popup
	  	
Version 1.0.0.0

	Released and declared as "stable" branch, 2006/07/30
	
	For detailed changelog see: changelog.OLD and:
	http://miranda.or.at/tabsrmm/tabsrmm-changelog/
		